# fast-api-demo

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  parallelism.py  pyproject.toml  pytest.ini  temp.py
app/: consts.py  main.py
app/routers/: __init__.py  comments.py  posts.py  todos.py  users.py
app/routes_generator/: basic_routes.py  comments_routes.py  posts_routes.py  todos_routes.py  users_routes.py
app/tools/: data_generator.py  models.py  urls.py  users.py
tests/: base_test_class.py  conftest.py
tests/routers/: test_comment.py  test_todos.py  test_users.py
