[tool.poetry]
name = "go-rest-test"
version = "0.1.0"
description = ""
authors = ["Oren Efraimov <orenef11@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.0"
fastapi = "0.70.0"
gunicorn = "20.1.0"
uvicorn = "0.15.0"
requests = "2.26.0"
pydantic = "1.8.2"

[tool.poetry.dev-dependencies]
pylint = "^2.12.1"
pytest ="^6.2.5"
pylint-pytest = "^1.1.2"
pre-commit = "^2.15.0"
tenacity = "^8.0.1"
aiohttp = "3.8.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
