[tool.poetry]
name = "go-rest-test"
version = "0.1.0"
description = ""
authors = ["Oren Efraimov <orenef11@gmail.com>"]

[tool.poetry.dependencies]
python = "3.10.0"
fastapi = "0.70.0"
gunicorn = "20.1.0"
uvicorn = "0.15.0"
requests = "2.25.0"
pydantic = "1.8.2"

[tool.poetry.dev-dependencies]
pylint = "^2.12.1"
pytest ="^6.2.5"
pylint-pytest = "^1.1.2"
pre-commit = "^2.15.0"
autopep8 = "^1.6.0"
localstack="^0.13.0.9"
boto3 = "^1.20.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
